--- a/payment.html
+++ b/payment.html
@@ -2,242 +2,199 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-    <!-- Title -->
-    <title>Paw Salvation</title>
-    <link href="new/css/main.css" rel="stylesheet" />
-    <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico" />
-    <script src="https://js.stripe.com/v3/"></script>
-    <script src="payment.js"></script>
-    <!-- Core Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/logo-1.png" />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="144x144"
+      href="images/ico/apple-touch-icon-144-precomposed.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="114x114"
+      href="images/ico/apple-touch-icon-114-precomposed.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="72x72"
+      href="images/ico/apple-touch-icon-72-precomposed.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="images/ico/apple-touch-icon-57-precomposed.png"
+    />
+    <title>Donation</title>
     <style>
-      .StripeElement {
-        box-sizing: border-box;
+      * {
+        font-family: "Helvetica Neue", Helvetica;
+        font-size: 15px;
+        font-variant: normal;
+        padding: 0;
+        margin: 0;
+      }
 
-        height: 40px;
+      html {
+        height: 100%;
+      }
 
-        padding: 10px 12px;
+      body {
+        background: #e6ebf1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100%;
+      }
 
-        border: 1px solid transparent;
+      form {
+        width: 480px;
+        margin: 20px 0;
+      }
+
+      .group {
+        background: white;
+        box-shadow: 0 7px 14px 0 rgba(49, 49, 93, 0.1),
+          0 3px 6px 0 rgba(0, 0, 0, 0.08);
         border-radius: 4px;
-        background-color: white;
-
-        box-shadow: 0 1px 3px 0 #e6ebf1;
-        -webkit-transition: box-shadow 150ms ease;
-        transition: box-shadow 150ms ease;
+        margin-bottom: 20px;
       }
 
-      .StripeElement--focus {
-        box-shadow: 0 1px 3px 0 #cfd7df;
+      label {
+        position: relative;
+        color: #8898aa;
+        font-weight: 300;
+        height: 40px;
+        line-height: 40px;
+        margin-left: 20px;
+        display: flex;
+        flex-direction: row;
       }
 
-      .StripeElement--invalid {
-        border-color: #fa755a;
+      .group label:not(:last-child) {
+        border-bottom: 1px solid #f0f5fa;
       }
 
-      .StripeElement--webkit-autofill {
-        background-color: #fefde5 !important;
+      label > span {
+        width: 120px;
+        text-align: right;
+        margin-right: 30px;
+      }
+
+      .field {
+        background: transparent;
+        font-weight: 300;
+        border: 0;
+        color: #31325f;
+        outline: none;
+        flex: 1;
+        padding-right: 10px;
+        padding-left: 10px;
+        cursor: text;
+      }
+
+      .field::-webkit-input-placeholder {
+        color: #cfd7e0;
+      }
+
+      .field::-moz-placeholder {
+        color: #cfd7e0;
+      }
+
+      button {
+        float: left;
+        display: block;
+        background: #666ee8;
+        color: white;
+        box-shadow: 0 7px 14px 0 rgba(49, 49, 93, 0.1),
+          0 3px 6px 0 rgba(0, 0, 0, 0.08);
+        border-radius: 4px;
+        border: 0;
+        margin-top: 20px;
+        font-size: 15px;
+        font-weight: 400;
+        width: 100%;
+        height: 40px;
+        line-height: 38px;
+        outline: none;
+      }
+
+      button:focus {
+        background: #555abf;
+      }
+
+      button:active {
+        background: #43458b;
+      }
+
+      .outcome {
+        float: left;
+        width: 100%;
+        padding-top: 8px;
+        min-height: 24px;
+        text-align: center;
+      }
+
+      .success,
+      .error {
+        display: none;
+        font-size: 13px;
+      }
+
+      .success.visible,
+      .error.visible {
+        display: inline;
+      }
+
+      .error {
+        color: #e4584c;
+      }
+
+      .success {
+        color: #666ee8;
+      }
+
+      .success .token {
+        font-weight: 500;
+        font-size: 13px;
       }
     </style>
   </head>
+  <script src="https://js.stripe.com/v3/"></script>
+
   <body>
-    <!-- ##### Header Area Start ##### -->
-    <header class="header-area">
-      <!-- Navbar Area -->
-      <div class="cryptos-main-menu">
-        <div class="classy-nav-container breakpoint-off">
-          <div class="container">
-            <!-- Menu -->
-            <nav class="classy-navbar justify-content-between" id="cryptosNav">
-              <!-- Logo -->
-              <a class="nav-brand" href="index.html"
-                ><a class="nav-brand" href="index.html"
-                  ><img
-                    src="img/crop-logo.png"
-                    class="top-logo"
-                    width="100"
-                    height="100"
-                    alt="logo"/></a
-              ></a>
-
-              <!-- Navbar Toggler -->
-              <div class="classy-navbar-toggler">
-                <span class="navbarToggler"
-                  ><span></span><span></span><span></span
-                ></span>
-              </div>
-
-              <!-- Menu -->
-              <div class="classy-menu">
-                <!-- close btn -->
-                <div class="classycloseIcon">
-                  <div class="cross-wrap">
-                    <span class="top"></span><span class="bottom"></span>
-                  </div>
-                </div>
-
-                <!-- Nav Start -->
-                <div class="classynav">
-                  <ul>
-                    <img
-                      src="img/security.png"
-                      class="top-logo"
-                      width="100"
-                      height="100"
-                      alt="logo"
-                    />
-                  </ul>
-
-                  <!-- Newsletter Form -->
-                </div>
-
-                <!-- Nav End -->
-              </div>
-            </nav>
-          </div>
+    <form method="POST">
+      <input type="hidden" name="token" />
+      <div class="group">
+        <label>
+          <span>Card number</span>
+          <div id="card-number-element" class="field"></div>
+        </label>
+        <label>
+          <span>Expiry date</span>
+          <div id="card-expiry-element" class="field"></div>
+        </label>
+        <label>
+          <span>CVC</span>
+          <div id="card-cvc-element" class="field"></div>
+        </label>
+      </div>
+      <button type="submit">DONATE $<span id="amount"></span></button>
+      <div class="outcome">
+        <div class="error"></div>
+        <div class="success">
+          Success! Your Stripe token is <span class="token"></span>
         </div>
       </div>
-    </header>
-    <!-- ##### Header Area End ##### -->
-    <br /><br />
-    <!-- ##### Hero Area End ##### -->
-
-    <section style="padding: 200px">
-      <form action="/charge" method="post" id="payment-form">
-        <div class="form-row">
-          <label for="card-element">
-            Credit or debit card
-          </label>
-          <div id="card-element">
-            <!-- A Stripe Element will be inserted here. -->
-          </div>
-
-          <!-- Used to display form errors. -->
-          <div id="card-errors" role="alert"></div>
-        </div>
-
-        <button>Submit Payment</button>
-      </form>
-    </section>
-
-    <footer id="footer" class="footer-donate">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-1"></div>
-          <div class="col-sm-4 edoja-color">
-            <p class="h3 respect font-weight-bold d-inline">PAW SALVATION</p>
-            <p class="h5 d-inline up-case" style="margin-top: 2rem;">
-              <a href="about.html">About Paw Salvation</a>
-            </p>
-            <p class="h5 d-inline up-case" style="margin-top: 2rem;">
-              <a href="">Policy</a>
-            </p>
-            <p class="h5 d-inline up-case" style="margin-top: 2rem;">
-              <a href="">pet care topics</a>
-            </p>
-            <p class="h5 d-inline up-case" style="margin-top: 2rem;">
-              <a href="">sitemap</a>
-            </p>
-            <p class="h5 d-inline up-case" style="margin-top: 2rem;">
-              <a href="">privacy policy</a>
-            </p>
-            <p class="h5 d-inline up-case" style="margin-top: 2rem;">
-              <a href="">about our ads</a>
-            </p>
-          </div>
-          <div class="col-sm-1"></div>
-
-          <div class="col-sm-5 edoja-color">
-            <br />
-            <p class="h5 line respect d-inline">
-              Get the latest on our progress, sign up for the PawSalvation
-              newsletter.
-            </p>
-            <br />
-            <p class="h5 line respect d-inline">PO BOX 489 POSEN, IL 60469</p>
-
-            <p class="h5 d-inline">
-              <a href="tel:+217518642">Phone number: +1 (217) 518 6428</a>
-            </p>
-
-            <p class="h5 d-inline">
-              <a href="mailto:info@pawsalvation.com">
-                Email: info@pawsalvation.com</a
-              >
-            </p>
-          </div>
-          <div class="col-sm-1"></div>
-        </div>
-      </div>
-    </footer>
-    <footer id="footer" class="footer-down">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-1"></div>
-          <div class="col-sm-7 edoja-color">
-            <p class="h6 d-inline line">
-              ©2019 pawsalvation.com. All trademarks are owned by Paw Salvation
-              Charity Organization.
-            </p>
-          </div>
-          <div class="col-sm-4 edoja-color">
-            <div class="">
-              <ul class="social-icons">
-                <li>
-                  <a href="https://www.facebook.com/pawsalvatn" target="_blank"
-                    ><img
-                      src="https://cdn2.iconfinder.com/data/icons/social-flat/512/facebook-128.png"
-                      width="32px;"
-                      height="32px;"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://twitter.com/PawSalvation" target="_blank"
-                    ><img
-                      src="https://cdn2.iconfinder.com/data/icons/social-flat/512/twitter-128.png"
-                      width="32px"
-                      height="32px;"
-                  /></a>
-                </li>
-                <li>
-                  <a href="" target="_blank"
-                    ><img
-                      src="https://cdn2.iconfinder.com/data/icons/social-flat/512/youtube-128.png"
-                      width="32px"
-                      height="32px;"
-                  /></a>
-                </li>
-                <li>
-                  <a
-                    href="https://www.instagram.com/pawsalvation/"
-                    target="_blank"
-                    ><img
-                      src="https://cdn2.iconfinder.com/data/icons/social-flat/512/instagram-128.png"
-                      width="32px"
-                      height="32px;"
-                  /></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+    </form>
   </body>
+  <script src="payment.js"></script>
+  <script>
+    document.getElementById("amount").innerHTML = sessionStorage.getItem(
+      "amount"
+    );
+  </script>
 </html>
