--- a/payment.html
+++ b/payment.html
@@ -186,7 +186,10 @@
       <div class="outcome">
         <div class="error"></div>
         <div class="success">
-          Success! Your Stripe token is <span class="token"></span>
+          Donation Recieved! <br />
+          <a style="text-decoration:none" href="index.html"
+            >CONTINUE TO HOMEPAGE</a
+          >
         </div>
       </div>
     </form>
