--- a/donation-2.html
+++ b/donation-2.html
@@ -443,8 +443,8 @@
           // a successful payment.
           // Instead use one of the strategies described in
           // https://stripe.com/docs/payments/checkout/fulfillment
-          successUrl: 'https://www.pawsalvation.com/success',
-          cancelUrl: 'https://www.pawsalvation.com/canceled',
+          successUrl: 'https://www.pawsalvation.com/success.html',
+          cancelUrl: 'https://www.pawsalvation.com/gift.html',
         })
         .then(function (result) {
           if (result.error) {
