--- a/success.html
+++ b/success.html
@@ -174,10 +174,9 @@
     const amount = sessionStorage.getItem("amount");
     fetch("https://test-paw.herokuapp.com/api/charge", {
       method: "POST",
-      headers: {
-        Accept: "application/json",
-        "Content-Type": "application/json"
-      },
+      headers: new Headers({
+        "Content-Type": "application/json; charset=UTF-8"
+      }),
       body: JSON.stringify({
         description: "gift",
         email,
