--- a/donation.html
+++ b/donation.html
@@ -93,7 +93,7 @@
 
 
 
-              <div id="chgtext">Your donation could pay for a kitten’s essential first vaccination. </div>
+              <div id="chgtext">Your donation will ensure a constant healthy meal for a homeless pet.  </div>
 
 
               <div class="mt-70 text-center">
