--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Your donation will go into the purchase of a truck to support this cause. </p>
 
 
 
-              <div id="chgtext">Your donation could pay for a kitten’s essential first vaccination. </div>
+              <div id="chgtext">Your donation will ensure a constant healthy meal for a homeless pet.  </div>
 
 
 
