Added new product

--- a/donation.html
+++ b/donation.html
@@ -167,9 +167,13 @@
         <div class="col-sm-1">
         </div>
         <div class="col-sm-7 edoja-color">
-          <p class="h6 d-inline line">
-            ©2019 pawsalvation.com. All trademarks are owned by Paw Salvation Charity Organization.</p>
-        </div>
+          <p class="h6 d-inline line"> 
+          &copy;
+          <span id="copyright">
+              <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+          </span>
+           pawsalvation.com. &nbsp;All trademarks are owned by Paw Salvation Charity Organization.</p>
+    </div>
         <div class="col-sm-4 edoja-color">
           <div class="">
             <ul class="social-icons">
