--- a/gift.html
+++ b/gift.html
@@ -22,11 +22,7 @@
     <![endif]-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="images/logo-1.png">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
-
+    <link rel="icon" href="img/core-img/favicon.ico">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -105,7 +101,51 @@
             <br>
         <br> 
         <div class="container">
-        <div class="row">
+            <div class="row mt-2">
+                <div class="col-sm-2">
+                </div>            
+                <div class="col-sm-3 text-center">
+                <img src="img/products/hat-and-tee.png" width="300rem;" height="300rem;" class="shop-img">
+                <br><br>
+                <p class="h4 donate-text line font-weight-bold">
+                   Branded Hat & T-Shirt
+                    <br>
+                     <p class="h4 new-product">
+                        HAT  &nbsp;&nbsp;  -  &nbsp;&nbsp;  $250.00 
+                        <br>
+                        TEE  &nbsp;&nbsp; -   &nbsp;&nbsp;   $200
+                    </p> 
+                        <p class="h5 new-product">All Proceeds Goes Into Providing A Meal A Day For A Pet. </p> 
+                  
+                    </p>
+                     <div class="text-center">
+                    <a href="javascript:void(0)"> 
+                        <button data-amount="50" data-description="Branded Hat & T-Shirt" id="sku_GYE4TydOFqbRYD" class="btn btn-sm btn-primary shop-btn">Shop Now</button></a>
+                    </div>
+                    <br><br>
+                </div>
+                <div class="col-sm-2">
+                </div>
+                <div class="col-sm-3 text-center">
+                   <img src="img/products/orange-hoodies.png" width="300rem;" height="300rem;" class="shop-img">
+                <br><br><br>
+                <p class="h4 donate-text line font-weight-bold">
+                    Orange Hoodies
+                    <br>
+                    $250 
+                    </p>
+                    <p class="h5 new-product">All Proceeds Goes To Providing A Meal For A Homeless Pup. </p> 
+                     <div class="text-center">
+                    <a href="javascript:void(0)"> 
+                        <button data-amount="50" data-description="Orange Hoodies" id="sku_GYDp3qg3zONl8w" class="btn btn-sm btn-primary shop-btn">Shop Now</button></a>
+                    </div>
+                    <br><br>
+                </div>
+                <div class="col-sm-2">
+                </div>
+                </div>
+
+        <div class="row mt-2">
         <div class="col-sm-2">
         </div>            
         <div class="col-sm-3 text-center">
@@ -169,7 +209,7 @@
         <p class="h4 donate-text line font-weight-bold">
           Branded Cap
             <br>
-           <strike class="text-dark"> $80.00 </strike>  &nbsp;&nbsp;   FREE
+           <strike class="text-dark"> $850 </strike>  &nbsp;&nbsp;   FREE
             </p>
              <div class="text-center">
             <a href="javascript:void(0)"> 
@@ -179,8 +219,23 @@
         </div>
         <div class="col-sm-2">
         </div>
-
-
+        </div>
+        <div class="row">
+            <div class="text-center col mt-2">
+                <img src="img/products/embroidered-pants.png" width="300rem;" height="300rem;" class="shop-img">
+                <br><br>
+                <p class="h4 donate-text line font-weight-bold">
+                  Embroidered Pants
+                    <br>
+                    $850
+                    </p>
+                    <p class="h5 new-product"> All Proceeds Goes To Providing A Meal A Day For All The Homeless Pets Out In The Streets. </p>
+                     <div class="text-center">
+                    <a href="javascript:void(0)"> 
+                        <button data-amount="80" data-description="Embroidered Pants" id="sku_GYDvGHvIaOPi27" class="btn btn-sm btn-primary shop-btn">Shop Now</button></a>
+                    </div>
+                    <br><br>
+            </div>
         </div>
     </div>
             </div>
@@ -230,9 +285,13 @@
                 <div class="col-sm-1">
                 </div>
                 <div class="col-sm-7 edoja-color">
-                 <p class="h6 d-inline line">
-                    ©2019 pawsalvation.com. All trademarks are owned by Paw Salvation Charity Organization.</p>           
-                </div>
+                    <p class="h6 d-inline line"> 
+                    &copy;
+                    <span id="copyright">
+                        <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+                    </span>
+                     pawsalvation.com. &nbsp;All trademarks are owned by Paw Salvation Charity Organization.</p>
+              </div>
                 <div class="col-sm-4 edoja-color">
                     <div class="">
                         <ul class="social-icons">
