--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
     <div id="myCarousel" class="carousel slide row over-1" data-ride="carousel">
       <!-- Indicators -->
 
-
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
@@ -115,7 +114,6 @@
 
   </div>
 
-
   <!-- ##### Hero Area Start ##### -->
   <!-- ##### Hero Area End ##### -->
 
@@ -130,8 +128,12 @@
                    
                     <br>
                     <p class="text-black h3" style="line-height: 2;"> Our goal is to bring about an environment where there are no unhappy homeless pets.
-                    With yourparticipation,we can achieve it.</p>
+                    With your participation,we can achieve it.</p>
                 </div>
+
+  <div class="text-center mt-50 md-50">
+    <a class="btn cryptos-btn donate m-1 text-white font-weight-bold" href="donation.html"> DONATE NOW </a>
+</div>
             </div>
         </div>
     </div>
@@ -169,16 +171,15 @@
 <div class="card-pics card ml-1 mr-1" style="width: 35rem;">
 <img src="img/bus-1.jpg" class="card-img-top" alt="...">
 <div class="card-body">
-<h1 class="text-black mt-30 green my-text font-weight-bold">Grooming for your Pets </h1>
-<p class="text-black h3  text-center">We would be offering free grooming services to homeless pets. These pets deserve to be cared for. We bring in these pets and give their coats the soothing grooming they always wanted.A human touch.
-Get involved today by donating to buy a dedicated truck to care for these pets. </p>
+<h1 class="text-black mt-30 green my-text font-weight-bold">Proposed Grooming Truck </h1>
+<p class="text-black h3  text-center">Food alone doesn’t cut it ... These homeless pets also require a bath. No one knows how long ago they had a bath. And this would be VERY beneficial to the pet. All your donations will also go into buying this grooming van. </p>
 </div>
 </div>
 <div class="card ml-1 mr-1" style="width: 35rem;">
 <img src="img/bus-2.jpg" class="card-img-top" alt="...">
 <div class="card-body">
-<h1 class="text-black mt-30 green my-text font-weight-bold"> Our Mobile Clinic Services active 24/7 </h1>
-<p class="text-black h3 text-center">Your donation will help in purhasing a truck to go around treating these pets and getting rid of dangerous diseases like rabies in homeless pets through vacination. </p>
+<h1 class="text-black mt-30 green my-text font-weight-bold"> Proposed Mobile Vet </h1>
+<p class="text-black h3 text-center">All donations will also go towards buying a mobile vet so this homeless pets can also enjoy adequate healthcare because this shouldn’t be a luxury ,but a basic requirement for their wellness. </p>
                                     
 
 </div>
@@ -186,9 +187,8 @@ Get involved today by donating to buy a dedicated truck to care for these pets. 
 <div class="card ml-1 mr-1" style="width: 35rem;">
 <img src="img/bus-3.jpg" class="card-img-top" alt="...">
 <div class="card-body">
-<h1 class="text-black mt-30 green my-text font-weight-bold">Food & Toys for the Furry ones! </h1>
-<p class="text-black h3 text-center">A hungry pet is a sad pet. Our homeless vets have these pets who are so loyal but are unable to feed them properly.
-Your donation will go into the purchase of a truck to support this cause. </p>
+<h1 class="text-black mt-30 green my-text font-weight-bold">Proposed Food Truck </h1>
+<p class="text-black h3 text-center">Your donations will help buy this food truck to enable paw salvation access more homeless people.</p>
 
 </div>
 </div>
@@ -387,9 +387,13 @@ Your donation will go into the purchase of a truck to support this cause. </p>
         <div class="col-sm-1">
         </div>
         <div class="col-sm-7 edoja-color">
-          <p class="h6 d-inline line">
-            ©2019 pawsalvation.com. All trademarks are owned by Paw Salvation Charity Organization.</p>
-        </div>
+          <p class="h6 d-inline line"> 
+          &copy;
+          <span id="copyright">
+              <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+          </span>
+           pawsalvation.com. &nbsp;All trademarks are owned by Paw Salvation Charity Organization.</p>
+    </div>
         <div class="col-sm-4 edoja-color">
           <div class="">
             <ul class="social-icons">
