Added new product

--- a/gift.html
+++ b/gift.html
@@ -106,8 +106,8 @@
                 </div>            
                 <div class="col-sm-3 text-center">
                 <img src="img/products/hat-and-tee.png" width="300rem;" height="300rem;" class="shop-img">
-                <br><br>
-                <p class="h4 donate-text line font-weight-bold">
+                
+                <p class="h4 donate-text line font-weight-bold mt-1">
                    Branded Hat & T-Shirt
                     <br>
                      <p class="h4 new-product">
@@ -128,8 +128,8 @@
                 </div>
                 <div class="col-sm-3 text-center">
                    <img src="img/products/orange-hoodies.png" width="300rem;" height="300rem;" class="shop-img">
-                <br><br><br>
-                <p class="h4 donate-text line font-weight-bold">
+              
+                <p class="h4 donate-text line font-weight-bold mt-2">
                     Orange Hoodies
                     <br>
                     $250 
