--- a/donation-2.html
+++ b/donation-2.html
@@ -83,10 +83,17 @@
 
       <div class="form step-2">
         <h1>BILLING INFORMATION</h1>
-        <ul class="tab-group">
-          <li class="tab active"><a href="#signup">CARD PAYMENT</a></li>
-          <li class="tab "><a href="#signup">PAYPAL</a></li>
-        </ul>
+        <script>
+          if (sessionStorage.getItem('checkoutid') === null) {
+            document.write(`
+            <ul class="tab-group">
+              <li class="tab active"><a href="#signup">CARD PAYMENT</a></li>
+              <li class="tab "><a href="#signup">PAYPAL</a></li>
+            </ul>
+            `)
+          }
+        </script>
+        
 
         <div class="tab-content">
           <div id="signup">
@@ -148,7 +155,7 @@
               <div id="amount_space"></div>
              
 
-              <button id="checkout-button" type="submit"  class="button button-block overlay" style="margin: auto;padding: auto;">Next Step</button>
+              <button id="checkout-button" type="submit"  class="button button-block overlay" style="margin: auto;padding: auto;">Next Step <script>if (sessionStorage.getItem('checkoutid') === null)sessionStorage.getItem("frequency") == 1 ? document.write(" (Monthly)") : document.write(" (One off)");  </script></button>
 
               <!--<button
   style="background-color:#6772E5;color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1em"
@@ -314,7 +321,7 @@
       if (sessionStorage.getItem('checkoutid') === null){
       document.getElementById("amount_space").innerHTML = 
       ` <div class="field-wrap">
-          <label>
+          <label class="active">
             Amount $<span class="req">*</span>
           </label>
           <input type="number" required autocomplete="off" id="amount" min="1" onkeypress="return isNumberKey(event)" value="${selected_amount}"/>
